Display 0 instead of null for total_comments

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Total comments:</strong>
-    <%= article.total_comments %>
+    <%= pluralize(article.total_comments || 0, "comment") %>
   </p>
 
 </div>
